--- a/britto.css
+++ b/britto.css
@@ -706,3 +706,6 @@ a.thumbnail:hover{border-color:#0088cc;-webkit-box-shadow:0 1px 4px rgba(0, 105,
 
 
 .post dd, .post dt {display:inline;}
+.madewith_badge {background-image:url(/madewithmeteor.png);}
+.madewith_upvote {top:3px; left:206px;}
+.madewith_upvote:hover {background-image:url(/madewithmeteorarrow.png);}
