--- a/client/css/britto.css
+++ b/client/css/britto.css
@@ -1,6 +1,10 @@
 body {padding-top:50px; padding-bottom:50px; }
 
 .post dd, .post dt {display:inline;}
+#mainContent {position:relative;}
 .madewith_badge {background-image:url(/madewithmeteor.png);}
 .madewith_vote_count {top:4px; width:48px; text-align:left;}
 .madewith_upvote:hover {background-image:url(/madewithmeteorarrow.png);}
+
+#slides {display:block; position:relative; }
+.slide {position:absolute; width:900px; }
