--- a/client/css/britto.css
+++ b/client/css/britto.css
@@ -6,5 +6,8 @@ body {padding-top:50px; padding-bottom:50px; }
 .madewith_vote_count {top:4px; width:48px; text-align:left;}
 .madewith_upvote:hover {background-image:url(/madewithmeteorarrow.png);}
 
+.post {width:800px;}
+
 #slides {display:block; position:relative; }
 .slide {position:absolute; width:900px; background:#fff;}
+footer {margin-top:2em;}
