--- a/client/css/britto.css
+++ b/client/css/britto.css
@@ -1,4 +1,4 @@
-body {padding-top:50px; padding-bottom:50px; }
+#mainContainer {padding-top:50px; padding-bottom:50px; }
 
 .post dd, .post dt {display:inline;}
 #mainContent {position:relative;}
