--- a/client/css/britto.css
+++ b/client/css/britto.css
@@ -1,5 +1,5 @@
 body {background:url(/img/graffiti-s.jpg) 0 0 no-repeat; background-size:100%; background-attachment:fixed;}
-#mainContainer {padding:50px 50px; background-color:rgba(255,255,255,0.90); }
+#mainContainer {padding:50px 50px; background-color:rgba(255,255,255,0.90); margin-bottom:50px;}
 .post dd, .post dt {display:inline;}
 #mainContent {position:relative;}
 .madewith_badge {background-image:url(/madewithmeteor.png);}
