--- a/client/css/britto.css
+++ b/client/css/britto.css
@@ -1,15 +1,379 @@
-body {background:url(/img/graffiti-s.jpg) 0 0 no-repeat; background-size:100%; background-attachment:fixed;}
-#mainContainer {padding:50px 50px; background-color:rgba(255,255,255,0.90); margin-bottom:50px;}
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  color: #333333;
+}
+input,
+textarea,
+select,
+.uneditable-input {
+  display: inline-block;
+  width: 210px;
+  height: 18px;
+  padding: 4px;
+  margin-bottom: 9px;
+  font-size: 13px;
+  line-height: 18px;
+  color: #555555;
+  border: 1px solid #cccccc;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+
+.btn {
+  display: inline-block;
+  *display: inline;
+  /* IE7 inline-block hack */
+
+  *zoom: 1;
+  padding: 4px 10px 4px;
+  margin-bottom: 0;
+  font-size: 13px;
+  line-height: 18px;
+  color: #333333;
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  vertical-align: middle;
+  background-color: #f5f5f5;
+  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: linear-gradient(top, #ffffff, #e6e6e6);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
+  border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+  border: 1px solid #cccccc;
+  border-bottom-color: #b3b3b3;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+  *margin-left: .3em;
+}
+.btn:hover,
+.btn:active,
+.btn.active,
+.btn.disabled,
+.btn[disabled] {
+  background-color: #e6e6e6;
+}
+.btn:active,
+.btn.active {
+  background-color: #cccccc \9;
+}
+.btn:first-child {
+  *margin-left: 0;
+}
+.btn:hover {
+  color: #333333;
+  text-decoration: none;
+  background-color: #e6e6e6;
+  background-position: 0 -15px;
+  -webkit-transition: background-position 0.1s linear;
+  -moz-transition: background-position 0.1s linear;
+  -ms-transition: background-position 0.1s linear;
+  -o-transition: background-position 0.1s linear;
+  transition: background-position 0.1s linear;
+}
+.btn:focus {
+  outline: thin dotted #333;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+.btn.active,
+.btn:active {
+  background-image: none;
+  -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
+  background-color: #e6e6e6;
+  background-color: #d9d9d9 \9;
+  outline: 0;
+}
+.btn.disabled,
+.btn[disabled] {
+  cursor: default;
+  background-image: none;
+  background-color: #e6e6e6;
+  opacity: 0.65;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+.btn-primary,
+.btn-primary:hover {
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  color: #ffffff;
+}
+.btn-primary.active,
+.btn-warning.active {
+  color: rgba(255, 255, 255, 0.75);
+}
+.btn-primary {
+  background-color: #0074cc;
+  background-image: -moz-linear-gradient(top, #0088cc, #0055cc);
+  background-image: -ms-linear-gradient(top, #0088cc, #0055cc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0055cc));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0055cc);
+  background-image: -o-linear-gradient(top, #0088cc, #0055cc);
+  background-image: linear-gradient(top, #0088cc, #0055cc);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0055cc', GradientType=0);
+  border-color: #0055cc #0055cc #003580;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+}
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary.active,
+.btn-primary.disabled,
+.btn-primary[disabled] {
+  background-color: #0055cc;
+}
+.btn-primary:active,
+.btn-primary.active {
+  background-color: #004099 \9;
+}
+
+button, input[type="button"], input[type="reset"], input[type="submit"] {
+width: auto;
+height: auto;
+cursor: pointer;
+-webkit-appearance: button;
+}
+
+body {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  background:url(/img/graffiti-s.jpg) 0 0 no-repeat;
+  background-size:100%;
+  background-attachment:fixed;
+  font-size:0.8em;
+}
+
+p {
+  margin-top:1em;
+  margin-bottom:1em;
+}
+
+dl {
+  margin-bottom:1.2em;
+}
+
+dt {
+  font-weight:bold;
+}
+
+dd {
+  padding-left:0.75em;
+}
+
+h1 {
+  font-size:1.75em;
+  line-height:2em;
+}
+h2 {
+  font-size:1.5em;
+  line-height:1.75em;
+}
+h3 {
+  font-size:1.4em;
+  line-height:1.5em;
+}
+
+legend {
+  width:100%;
+  font-size:1.4em;
+  line-height:1.5em;
+  border-bottom:1px solid #333;
+  margin-bottom:1em;
+}
+
+legend + .control-group {
+margin-top: 18px;
+-webkit-margin-top-collapse: separate;
+}
+
+a {
+  color: #08C;
+  text-decoration: none;
+}
+
+.row-fluid > [class*="span"] {
+  margin-left: 2%;
+}
+
+.row-fluid > [class*="span"]:first-child {
+  margin-left: 0;
+}
+
+.row-fluid::after {
+clear: both;
+}
+
+.row-fluid::before, .row-fluid::after {
+  display: table;
+  content: "";
+}
+
+.row-fluid > [class*="span"] {
+  float: left;
+  margin-left: 2%;
+}
+
+.container::after {
+  clear: both;
+}
+
+.span8, .span2 {
+  float:left;
+}
+
+.span8 {
+  width:65%;
+  margin-right:1%;
+}
+.span2 {
+  width:25%;
+}
+
+.navbar {
+  z-index:1000;
+  padding:0 0 0 10%;
+  width:100%;
+  background: rgba(0, 0, 0, 0.80);
+  border-top:4px solid #FFC20D;
+  color:#fff;
+  font-size:1.3em;
+}
+
+.navbar a {
+  color:#fff;
+}
+
+.navbar-fixed-top {
+  position:fixed;
+}
+
+.navbar .brand {
+  background-color:#FFC20D;
+  font-size:1.2em;
+  float:left;
+  padding:0.5em;
+  color:#000;
+}
+.navbar ul::after {
+  clear: both;
+}
+
+.navbar ul::before, .navbar ul::after {
+  display: table;
+  content: "";
+}
+
+.navbar ul li {
+  float:left;
+}
+
+.navbar ul a {
+  display:block;
+  padding:0.75em;
+  color:#ccc;
+}
+
+.navbar ul .active a {
+  color:#fff;
+}
+
+.navbar ul a:hover {
+  color:#fff;
+}
+
+#mainContainer {margin:0 10%; padding:50px 50px; background-color:rgba(255,255,255,0.90); margin-bottom:50px;}
 .post dd, .post dt {display:inline;}
 #mainContent {position:relative;}
-.madewith_badge {background-image:url(/madewithmeteor.png); position:fixed !important;}
+a.madewith_badge {background-image:url(/madewithmeteor.png); position:fixed; top:5px;}
 .madewith_vote_count {top:4px; width:48px; text-align:left;}
 .madewith_upvote:hover {background-image:url(/madewithmeteorarrow.png);}
 
+.control-group {
+  margin-bottom:0.75em;
+}
 
-.form-actions {background-color:transparent; border:none;}
-legend {border-bottom:1px solid #333;}
+.form-horizontal .control-label {
+  float:left;
+}
 
+.form-horizontal .controls {
+  margin-left:12em;
+}
+
+.form-horizontal .control-group::before, .form-horizontal .control-group::after {
+  display: table;
+  content: "";
+}
+
+.form-horizontal .control-group::after {
+  clear: both;
+}
+
+.form-actions {
+  background-color:transparent;
+  border:none;
+  padding-left:12em;
+}
 
 #slides {display:block; position:relative; }
 .slide {position:absolute; width:900px; background:#fff;}
