advanced post settings published : Bool create : Date author : String
whats left to do:
create a user_area page that shows all posts in a list (unpublished and future posts too,
kinda confusing to have hidden posts suddenly show up, isnt it ;) )

--- a/client/css/britto.css
+++ b/client/css/britto.css
@@ -11,35 +11,35 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
 ol, ul {
-	list-style: none;
+  list-style: none;
 }
 blockquote, q {
-	quotes: none;
+  quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+  content: '';
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 code {
@@ -79,6 +79,11 @@ select,
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
+  background-color: #fff;
+}
+
+select {
+  height: 26px;
 }
 
 ul li {
@@ -472,4 +477,18 @@ button.close {
   color: #3A87AD;
   background-color: #D9EDF7;
   border-color: #BCE8F1;
+}
+
+
+select {
+  height: 26px;
+}
+
+#date-control-group select {
+  width: auto;
+  padding: 0;
+}
+
+#post-published {
+  width: auto;
 }
