--- a/client/css/britto.css
+++ b/client/css/britto.css
@@ -480,9 +480,6 @@ button.close {
 }
 
 
-select {
-  height: 26px;
-}
 
 #date-control-group select {
   width: auto;
@@ -491,4 +488,16 @@ select {
 
 #post-published {
   width: auto;
+}
+
+#post-table td, #post-table th {
+  padding: 0 4px;
+}
+
+#post-table {
+  text-align: left;
+}
+
+#post-table tr:nth-child(even) {
+  background: #dde;
 }
