--- a/client/css/britto.css
+++ b/client/css/britto.css
@@ -229,10 +229,10 @@ body {
   background-size:100%;
   background-attachment:fixed;
   font-size:0.8em;
+  line-height:1.4em;
 }
 
 p {
-  margin-top:1em;
   margin-bottom:1em;
 }
 
