post tags are mustbe complete now.
see:

http://britto-manarius.meteor.com/
to check the changes at work :)

--- a/client/css/britto.css
+++ b/client/css/britto.css
@@ -571,7 +571,7 @@ ul.tags-list li {
   margin: 0 5px 0 0;
 }
 
-ul.tags-list li input {
+ul.tags-list li input, ul.tags-list li button {
   padding: 0 3px;
   border: 0 none;
   background: transparent;
