--- a/client/css/britto.css
+++ b/client/css/britto.css
@@ -534,10 +534,13 @@ select#orderby {
 nav.user-area-nav {
   display: inline-block;
   position: fixed;
-  background-color: #222;
+  background-color: rgba(0, 0, 0, 0.80);
   z-index: 1001;
   top: 45px;
-  padding: 5px 10px;
+  width:10%;
+}
+nav.user-area-nav ul {
+  margin:1em;
 }
 
 nav.user-area-nav header {
